@@ -8,7 +8,8 @@ CHANGE: UI    | Create Vivaldi views for each DHT in use [Groundy]
 CHANGE: UI    | Peers view hostname column now sorts host names by the most significant part first [The 8472] 
 
 BUGFIX: Core  | Fixed bug which prevented torrent files from being moved properly [amc1]
-BUGFIX: Core  | Re-Opening torrents does not delete files when setting some of the already existing files to DND anymore [The 8472] 
+BUGFIX: Core  | Reopening torrents does not delete files when setting some of the already existing files to DND anymore [The 8472]
+BUGFIX: Core  | Fixed bug which prevented UPnP mappings from being successful when a SOCKS proxy was used [amc1]
 
 2008.06.16 | Vuze 3.1.0.0
 
